Added round button + updated image Hero 3D

--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
         <link rel="stylesheet" href="styles/logo.css">
         <link rel="stylesheet" href="styles/buttonOrange.css">
         <link rel="stylesheet" href="styles/buttonPurple.css">
-        <link rel="stylesheet" href="styles/mobile.css">
+        <link rel="stylesheet" href="styles/mobileHeader.css">
         <link rel="stylesheet" href="styles/main.css">
-        <link rel="stylesheet" href="styles/mobile__main.css">
+        <link rel="stylesheet" href="styles/mobileMain.css">
+        <link rel="stylesheet" href="styles/buttonRound.css">
 
 
         <script src="js/burger.js"></script>
@@ -34,7 +35,8 @@
                 <span class="burger__buttons"></span>
                 <span class="burger__buttons"></span>
             </div>
-            <div class="logo"><a href="#" class="log__link"><img class="logo__image" src="images/Logo.svg" alt="Logo"></a>
+            <div class="logo"><a href="#" class="log__link"><img class="logo__image" src="images/Logo.svg"
+                        alt="Logo"></a>
             </div>
             <ul class="up">
                 <li class="types"><a href="#" class="links">Home</a></li>
@@ -48,15 +50,21 @@
 
         <main class="main">
             <div class="block__first">
-            <article class="article__first">
-                <p class="first__block-bold">Grow your subcription business</p>
-                <div class="position__types-block"><p class="first__block-middle">Outcome-centered products that reduce churn, optimize pricing, and grow
-                    your subscription business end-to-end.</p></div>
-                <div class="position__types-block"><button class="button__purple">Get Started</button></div>
+                <article class="article__first">
+                    <p class="first__block-bold">Grow your subcription business</p>
+                    <div class="position__types-block">
+                        <p class="first__block-middle">Outcome-centered products that reduce churn, optimize pricing,
+                            and grow
+                            your subscription business end-to-end.</p>
+                    </div>
+                    <div class="position__types-block">
+                        <button class="button__purple">Get Started</button>
+                        <button class="button__round"><div class="image__arrow"><a href="#"><img class="arrow" src="images/Arrow.svg" alt="arrow"></a></div></button>
+                    </div>
                 </article>
 
-            <div class="first__image"><img src="images/personSkate.svg" alt="personOnSkate"></div>
-        </div>
+                <div class="first__image"><img src="images/Hero 3D.svg" alt="personOnSkate"></div>
+            </div>
         </main>
     </body>
 
