Added block with image-companies and second-block content

--- a/index.html
+++ b/index.html
@@ -54,16 +54,34 @@
                     <p class="first__block-bold">Grow your subcription business</p>
                     <div class="position__types-block">
                         <p class="first__block-middle">Outcome-centered products that reduce churn, optimize pricing,
-                            and grow
-                            your subscription business end-to-end.</p>
+                            and grow your subscription business end-to-end.</p>
                     </div>
                     <div class="position__types-block">
                         <button class="button__purple">Get Started</button>
-                        <button class="button__round"><div class="image__arrow"><a href="#"><img class="arrow" src="images/Arrow.svg" alt="arrow"></a></div></button>
+                        <button class="button__round">
+                            <div class="image__arrow"><a href="#"><img class="arrow" src="images/Arrow.svg"
+                                        alt="arrow"></a></div>
+                        </button>
                     </div>
                 </article>
 
                 <div class="first__image"><img src="images/Hero 3D.svg" alt="personOnSkate"></div>
+            </div>
+            <div class="companies">
+                <span class="image__companies"><img src="images/companyFirst.svg" alt="company"></span>
+                <span class="image__companies"><img src="images/companySecond.svg" alt="company"></span>
+                <span class="image__companies"><img src="images/companyThird.svg" alt="company"></span>
+                <span class="image__companies"><img src="images/companyFourth.svg" alt="company"></span>
+                <span class="image__companies"><img src="images/companyFifth.svg" alt="company"></span>
+            </div>
+
+            <div class="block__second">
+                <div class="second__image"><img src="images/Calculator.svg" alt="man_with_calculator"></div>
+                <article class="article__second">
+                    <p class="second__block-bold">Subscription index</p>
+                    <p class="second__block-middle">A daily dataset to keep you up to date on subscription market trends and what's happening in your vertical.</p>
+                    <a href="#" class="link__block-second">Learn more</a>
+                </article>
             </div>
         </main>
     </body>
