Added third block

--- a/index.html
+++ b/index.html
@@ -83,6 +83,15 @@
                     <a href="#" class="link__block-second">Learn more</a>
                 </article>
             </div>
+
+            <div class="block__third">
+                <article class="article__third">
+                    <p class="third__block-bold">In-depth metrics</p>
+                    <p class="third__block-middle">Accurate, real-time reporting at your fingertips. Getting data has never been easier.</p>
+                    <a href="#" class="link__block-third">Learn more</a>
+                </article>
+                <div class="third__image"><img src="images/Diagram.svg" alt="Diagram"></div>
+            </div>
         </main>
     </body>
 
