--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
                 <div class="second__image"><img src="images/Calculator.svg" alt="man_with_calculator"></div>
                 <article class="article__second">
                     <p class="second__block-bold">Subscription index</p>
-                    <p class="second__block-middle">A daily dataset to keep you up to date on subscription market trends and what's happening in your vertical.</p>
+                    <p class="second__block-middle">A daily dataset to keep you up to date on subscription market trends
+                        and what's happening in your vertical.</p>
                     <a href="#" class="link__block-second">Learn more</a>
                 </article>
             </div>
@@ -87,10 +88,28 @@
             <div class="block__third">
                 <article class="article__third">
                     <p class="third__block-bold">In-depth metrics</p>
-                    <p class="third__block-middle">Accurate, real-time reporting at your fingertips. Getting data has never been easier.</p>
+                    <p class="third__block-middle">Accurate, real-time reporting at your fingertips. Getting data has
+                        never been easier.</p>
                     <a href="#" class="link__block-third">Learn more</a>
                 </article>
                 <div class="third__image"><img src="images/Diagram.svg" alt="Diagram"></div>
+            </div>
+            <div class="block__fourth">
+                <div class="icon icon__first">
+                    <img src="images/IconCard.svg" alt="card" class="card">
+                    <p class="first__icon-text">Benchmarks</p>
+                    <p class="second__icon-text">See how you stack up against comparable companies in similar stages.</p>
+                </div>
+                <div class="icon icon__second">
+                    <img src="images/IconCalculator.svg" alt="calculator" class="card">
+                    <p class="first__icon-text">Pricing Audit</p>
+                    <p class="second__icon-text">Benchmark the health of your monetization and pricing strategy.</p>
+                </div>
+                <div class="icon icon__third">
+                    <img src="images/IconCamera.svg" alt="camera" class="card">
+                    <p class="first__icon-text">Retention Audit</p>
+                    <p class="second__icon-text">Audit where revenue leakage exists and where you can increase retention.</p>
+                </div>
             </div>
         </main>
     </body>
