Added fifth block

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     </head>
 
     <body>
+        <div class="container"></div>
         <header class="header open">
             <div class="header__burger-button" id="burger">
                 <span class="burger__buttons"></span>
@@ -111,7 +112,18 @@
                     <p class="second__icon-text">Audit where revenue leakage exists and where you can increase retention.</p>
                 </div>
             </div>
+
+            <div class="block__fifth">
+                <article class="fifth__block-text">
+                    Get the right plan for future product.
+                </article>
+                <div class="fifth__block-buttons">
+                    <button class="fifth__button-one">Yearly</button>
+                    <button class="fifth__button-two">Monthly</button>
+                </div>
+            </div>
         </main>
+    </div>
     </body>
 
 </html>
