--- a/index.html
+++ b/index.html
@@ -122,6 +122,33 @@
                     <button class="fifth__button-two">Monthly</button>
                 </div>
             </div>
+            
+            <div class="sixth__block">
+                <div class="sixth__card">
+                    <div class="sixth__text-one">Starter</div>
+                    <div class="sixth__text-two">Free</div>
+                    <div class="sixth__text-three">1 Website</div>
+                    <div class="sixth__text-three">5 GB Hosting</div>
+                    <div class="sixth__text-three">Limited Support</div>
+                    <button class="sixth__button">Get Started</button>
+                </div>
+                <div class="sixth__card">
+                    <div class="sixth__text-one">Premium</div>
+                    <div class="sixth__text-two after">$29</div>
+                    <div class="sixth__text-three">10 Websites</div>
+                    <div class="sixth__text-three">15 GB Hosting</div>
+                    <div class="sixth__text-three">Premium Support</div>
+                    <button class="sixth__button">Get Started</button>
+                </div>
+                <div class="sixth__card">
+                    <div class="sixth__text-one">Enterprise</div>
+                    <div class="sixth__text-two after">$49</div>
+                    <div class="sixth__text-three">Unlimited Websites</div>
+                    <div class="sixth__text-three">50 GB Hosting</div>
+                    <div class="sixth__text-three">Premium Support</div>
+                    <button class="sixth__button">Get Started</button>
+                </div>
+            </div>
         </main>
     </div>
     </body>
