--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
                 <div class="icon icon__first">
                     <img src="images/IconCard.svg" alt="card" class="card">
                     <p class="first__icon-text">Benchmarks</p>
-                    <p class="second__icon-text">See how you stack up against comparable companies in similar stages.</p>
+                    <p class="second__icon-text">See how you stack up against comparable companies in similar stages.
+                    </p>
                 </div>
                 <div class="icon icon__second">
                     <img src="images/IconCalculator.svg" alt="calculator" class="card">
@@ -109,7 +110,8 @@
                 <div class="icon icon__third">
                     <img src="images/IconCamera.svg" alt="camera" class="card">
                     <p class="first__icon-text">Retention Audit</p>
-                    <p class="second__icon-text">Audit where revenue leakage exists and where you can increase retention.</p>
+                    <p class="second__icon-text">Audit where revenue leakage exists and where you can increase
+                        retention.</p>
                 </div>
             </div>
 
@@ -122,7 +124,7 @@
                     <button class="fifth__button-two">Monthly</button>
                 </div>
             </div>
-            
+
             <div class="sixth__block">
                 <div class="sixth__card">
                     <div class="sixth__text-one">Starter</div>
@@ -150,7 +152,7 @@
                 </div>
             </div>
         </main>
-    </div>
+        </div>
     </body>
 
 </html>
